tests/transpiler/x/hs/group_items_iteration.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/group_items_iteration.hs:26:15: error:
    parse error on input ‘=’
    Suggested fix:
      Perhaps you need a 'let' in a 'do' block?
      e.g. 'let x = 5' instead of 'x = 5'
   |
26 |         total = 0
   |               ^
